# RDR-2000

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_redist  build_shaders  pack.sh
SDK/Delphi/XPLM/: XPLMGraphics.pas
SDK/Libraries/Mac/XPLM.framework/Versions/C/: XPLM
SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
cmake/: xplm.cmake
lib/: CMakeLists.txt
rdr2000/resources/: cursor_rot_left.cur  cursor_rot_right.cur
rdr2000/resources/shaders/: rdr_screen.frag.120  rdr_screen.frag.420  wxr_antenna.frag.120  wxr_antenna.frag.420  wxr_antenna.vert.120  wxr_antenna.vert.420  wxr_copy.frag.120  wxr_copy.frag.420  wxr_test.frag.120  wxr_test.frag.420
shaders/: rdr_screen.frag  rdr_screen.vert  wxr_antenna.frag  wxr_copy.frag  wxr_test.frag
src/glutils/: CMakeLists.txt  gl.c  glutils_impl.h  renderer.c
src/glutils/glutils/: gl.h  renderer.h
src/helpers/: CMakeLists.txt  helpers.c
src/helpers/helpers/: helpers.h
src/rdr2000/: CMakeLists.txt  cursor.h  rds-81.c  rds-81.h  rds-81_buttons.c  rds-81_cmd.c  rds-81_impl.h  rds-81_logic.c  time_sys.c  time_sys.h  xplane.c  xplane.h
src/rdr2000/os/: cursor-lin.c  cursor-mac.m  cursor-win.c
src/standalone-wxr/: CMakeLists.txt  rds-81.c  rds-81.h  rds-81_impl.h  rds-81_logic.c  xplane.c  xplane.h
